# shop-assistent

./: .env  main.py  pyproject.toml
Data/: data_insertion.py
Embedding/: sync_pinecone.py
backend/: main.py
backend/db/: mysql.py
backend/routes/: products.py
backend/services/: gemini_chain.py  vector_store.py
frontend/: app.py
