[project]
name = "shopassistent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.136.1",
    "google-generativeai>=0.8.6",
    "langchain>=1.3.1",
    "langchain-google-genai>=4.2.2",
    "langchain-pinecone",
    "mysql-connector-python>=9.7.0",
    "pandas>=2.0.0",
    "pinecone>=7.0.0",
    "python-dotenv>=1.2.2",
    "streamlit",
    "tqdm>=4.67.3",
    "uvicorn>=0.47.0",
]
